--- a/index.html
+++ b/index.html
@@ -32,6 +32,24 @@
             <input type="text" placeholder="Adicione um novo item" id="item">
             <button>Adicionar item</button>
         </section>
+
+        <section class="list">
+            <div class="item">
+                <div>
+                    <input type="checkbox" name="List" id="item-1">
+                    <div class="custom-checkbox">
+                        <img src="./assets/checked.svg" alt="checked">
+
+                        <label for="item-1">Maçã</label>
+
+                    </div>
+
+                    <button>
+                        <img src="./assets/trash-icon.svg" alt="trash icon">
+                    </button>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
