--- a/index.html
+++ b/index.html
@@ -49,6 +49,38 @@
                     </button>
                 </div>
             </div>
+
+            <div class="item">
+                <div>
+                    <input type="checkbox" name="List" id="item-2">
+                    <div class="custom-checkbox">
+                        <img src="./assets/checked.svg" alt="checked">
+
+                        <label for="item-2">Kiwi</label>
+
+                    </div>
+
+                    <button>
+                        <img src="./assets/trash-icon.svg" alt="trash icon">
+                    </button>
+                </div>
+            </div>
+
+            <div class="item">
+                <div>
+                    <input type="checkbox" name="List" id="item-3">
+                    <div class="custom-checkbox">
+                        <img src="./assets/checked.svg" alt="checked">
+
+                        <label for="item-3">Laranja</label>
+
+                    </div>
+
+                    <button>
+                        <img src="./assets/trash-icon.svg" alt="trash icon">
+                    </button>
+                </div>
+            </div>
         </section>
     </main>
 </body>
