--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="./main.js" defer ></script>
     <link
       rel="stylesheet"
       type="text/css"
@@ -35,7 +36,7 @@
     <main>
         <section class="add-item">
             <input type="text" placeholder="Adicione um novo item" id="item">
-            <button>Adicionar item</button>
+            <button onclick="addItem()">Adicionar item</button>
         </section>
 
         <section class="list">
