--- a/index.html
+++ b/index.html
@@ -39,55 +39,7 @@
             <button onclick="addItem()">Adicionar item</button>
         </section>
 
-        <section class="list">
-            <div class="item">
-                <div>
-                    <input type="checkbox" name="List" id="item-1">
-                     <div class="custom-checkbox">
-                        <img src="./assets/checked.svg" alt="checked">
-
-                        <label for="item-1">Maçã</label>
-
-                    </div>
-
-                    <button>
-                        <img src="./assets/trash-icon.svg" alt="trash icon">
-                    </button>
-                </div>
-            </div>
-
-            <div class="item">
-                <div>
-                    <input type="checkbox" name="List" id="item-2">
-                    <div class="custom-checkbox">
-                        <img src="./assets/checked.svg" alt="checked">
-
-                        <label for="item-2">Kiwi</label>
-
-                    </div>
-
-                    <button>
-                        <img src="./assets/trash-icon.svg" alt="trash icon">
-                    </button>
-                </div>
-            </div>
-
-            <div class="item">
-                <div>
-                    <input type="checkbox" name="List" id="item-3">
-                    <div class="custom-checkbox">
-                        <img src="./assets/checked.svg" alt="checked">
-
-                        <label for="item-3">Laranja</label>
-
-                    </div>
-
-                    <button>
-                        <img src="./assets/trash-icon.svg" alt="trash icon">
-                    </button>
-                </div>
-            </div>
-        </section>
+        <section class="list"> </section>
 
         <div class="warning">
             <div>
