--- a/index.html
+++ b/index.html
@@ -1,29 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html>More actions
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./main.js" defer ></script>
     <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/regular/style.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/fill/style.css"
-    />
-    <link rel="stylesheet" href="style.css">
+    rel="stylesheet"
+    type="text/css"
+    href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/regular/style.css"
+  />
+  <link
+    rel="stylesheet"
+    type="text/css"
+    href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/fill/style.css"
+  />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-
-    <title>Quicklist</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./style.css">
+  <script src="./main.js" defer></script>
+    <title>QuickList</title>
 </head>
 <body>
     <header>
-        <img src="./assets/logo.png" alt="logo quicklist">
+        <img src="./assets/logo.png" alt="Logo QuickList">
 
         <button>
             <i class="ph ph-arrow-left"></i>
@@ -35,22 +34,14 @@
 
     <main>
         <section class="add-item">
-            <input type="text" placeholder="Adicione um novo item" id="item">
+            <input type="text" id="item" placeholder="Adicione um novo item">
             <button onclick="addItem()">Adicionar item</button>
         </section>
 
-        <section class="list"> </section>
+        <section class="list"></section>
 
         <div class="warning">
-            <div>
+        <div class="warning hide-warning">
+            <p>
                 <i class="ph ph-warning-circle ph-fill"></i>
                 <span>O item foi removido da lista</span>
-            </div>
-
-            <button>
-                <i class="ph ph-x"></i>
-            </button>
-        </div>
-    </main>
-</body>
-</html>
