--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>More actions
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -40,8 +40,15 @@
 
         <section class="list"></section>
 
-        <div class="warning">
         <div class="warning hide-warning">
             <p>
                 <i class="ph ph-warning-circle ph-fill"></i>
                 <span>O item foi removido da lista</span>
+            </p>
+            <button>
+            <button onclick="addHideWarningClass()">
+                <i class="ph ph-x"></i>
+            </button>
+        </div>
+    </main>
+</body>
