--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
   <script src="./main.js" defer></script>
-    <title>QuickList</title>
+    <title>QuickList - Igor Fernandes Rodrigues 22bti</title>
 </head>
 <body>
     <header>
